# structured-gen-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-tests.yml  rust.yml
benches/: benchmarks.rs
src/: lib.rs  main.rs  util.rs
src/util/: mod.rs
tests/: tests.rs
