[package]
name = "structured-gen-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
regex-automata = "0.4.7"
rand = {version="0.8.5", features=["small_rng"]}
clap = { version = "4.5.13", features = ["derive"] }
log = {version="0.4.22",   features = ["release_max_level_info"]} # Statically allow only INFO+ logging in release
env_logger = "0.11.5"

[patch.crates-io]
# The Rust regex-automata crate has been forked and patched
# to expose the internals of automata states, that are not
# available through its public API.
regex-automata = { git = 'https://github.com/f-forcher/regex', branch = 'expose-state-iter' }

[dev-dependencies]
insta = "1.39.0"

